[package]
name = "region-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
blake2 = "0.10.6"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
fastnbt = { version = "2.5.0", path = "../fastnbt-btreemap" }
flate2 = "1.1.1"
glob = "0.3.2"
hex = "0.4.3"
log = { version = "0.4.27", features = ["std"] }
lz4_flex = "0.11.3"
rand = "0.9.1"
rocksdb = "0.23.0"
similar = "2.7.0"
url = "2.5.4"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
