[package]
name = "region-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
fastnbt = { git = "https://github.com/HairlessVillager/fastnbt", branch = "master", features = ["btreemap"] }
flate2 = "1.1.1"
log = { version = "0.4.27", features = ["std"] }
lz4_flex = "0.11.3"
rand = "0.9.1"
rayon = "1.10.0"
similar = "2.7.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "bench_mca_diff"
harness = false

[[bench]]
name = "bench_mca_patch_revert"
harness = false
